@@ -1,10 +1,11 @@
 package pl.pongut.warehouse.application;
 
+import org.bson.types.ObjectId;
 import org.springframework.stereotype.Component;
+import pl.pongut.warehouse.data.product.Product;
 import pl.pongut.warehouse.data.supplier.Supplier;
 import pl.pongut.warehouse.domain.repository.ProductRepository;
 import pl.pongut.warehouse.domain.repository.SupplierRepository;
-import reactor.core.publisher.Flux;
 
 import javax.annotation.PostConstruct;
 import java.util.Arrays;
@@ -23,31 +24,33 @@ public class DbInitializer {
 
     @PostConstruct
     public void initialize() {
-        Supplier supplier = createSupplier("www.supersprzedawca.pl", "+48512022033", "PL", "31-695", "małopolska", "Kraków", "Zamki z piasku");
-        Supplier supplier2 = createSupplier("www.hugoboss.pl", "+44512031033", "FR", "800-855", "La Defense", "Paryż", "Bonjour");
-        Supplier supplier3 = createSupplier("www.gawarin.pl", "+41512022033", "UA", "36-458", "ukraine", "Odessa", "Panimaje");
-        List<Supplier> toSave = Arrays.asList(supplier, supplier2, supplier3);
-        Flux<Supplier> supplierFlux = supplierRepository.saveAll(toSave);
-        System.out.println("bonjourfdsfdsfdsfdsfdsfdsfds");
-        supplierFlux.doOnError(
-                e -> System.out.println(e.getCause())
+        List<Supplier> toSave = Arrays.asList(
+            createSupplier("111111111111111111111111", "www.supersprzedawca.pl", "+48512022033", "PL", "31-695", "małopolska", "Kraków", "Zamki z piasku"),
+            createSupplier("222222222222222222222222", "www.hugoboss.pl", "+44512031033", "FR", "800-855", "La Defense", "Paryż", "Bonjour"),
+            createSupplier("333333333333333333333333", "www.gawarin.pl", "+41512022033", "UA", "36-458", "ukraine", "Odessa", "Panimaje")
+        );
+        supplierRepository.saveAll(toSave).subscribe();
+
+        productRepository.saveAll(
+            List.of(
+                Product.builder()._id(new ObjectId("111111111111111111111111")).productName("milk").categoryName("cat1").unitPrice(1d).build(),
+                Product.builder()._id(new ObjectId("222222222222222222222222")).productName("milkyway").unitPrice(3d).categoryName("cat1").build(),
+                Product.builder()._id(new ObjectId("333333333333333333333333")).productName("prefixmilkyway").unitPrice(5d).categoryName("cat2").build(),
+                Product.builder()._id(new ObjectId("444444444444444444444444")).productName("SomeOtherProd").unitPrice(10d).categoryName("cat1").build()
+            )
         ).subscribe();
-        System.out.println("jk");
-        Flux<Supplier> bonjour = supplierRepository.findByCompanyName("Bonjour");
-        System.out.println(bonjour);
-        System.out.println("bonjourfdsfdsfdsfdsfdsfdsfds");
     }
 
-    private Supplier createSupplier(String homePage, String phone, String country, String postalCode, String region, String city, String companyName) {
+    private Supplier createSupplier(String hexId, String homePage, String phone, String country, String postalCode, String region, String city, String companyName) {
         return Supplier.builder()
-                .homePage(homePage)
-                .phone(phone)
-                .country(country)
-                .postalCode(postalCode)
-                .region(region)
-                .city(city)
-                .companyName(companyName)
-                .build();
+            ._id(new ObjectId(hexId))
+            .homePage(homePage)
+            .phone(phone)
+            .country(country)
+            .postalCode(postalCode)
+            .region(region)
+            .city(city)
+            .companyName(companyName)
+            .build();
     }
-
 }
